--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 _build
 .stack-work
 dist-newstyle
+target
+
+
+1234\n
+5678\n
+9012\n
+
+width = 4
+5 + 1 = 7
+5 - 1 = 5
+5 - width = 2
+5 - width - 1 = 1
+5 - width - 2 = 0
+5 + width = 10
+
